--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.1.0",
     "bulma": "^0.7.1",
     "node-sass": "^4.9.2",
     "sass-loader": "^7.0.3",
