--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@vue/test-utils": "^1.0.0-beta.16",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.0.1",
+    "push-dir": "^0.4.1",
     "vue-template-compiler": "^2.5.16"
   },
   "browserslist": [
