--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bulma": "^0.7.1",
     "faker": "^4.1.0",
+    "moment": "^2.22.2",
     "node-sass": "^4.9.2",
     "sass-loader": "^7.0.3",
     "vue": "^2.5.16",
