--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.18.0",
     "bulma": "^0.7.1",
     "faker": "^4.1.0",
+    "firebase": "^5.5.7",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
     "node-sass": "^4.9.3",
